--- a/src/academics.html
+++ b/src/academics.html
@@ -13,7 +13,7 @@
     <button data-lang="hi">हिंदी</button>
   </div>
   <nav style="background: #1a5276; padding: 10px; text-align: center;">
-    <a href="karn_vidya_index.html" style="color: white; margin: 0 10px;">Home</a>
+    <a href="index.html" style="color: white; margin: 0 10px;">Home</a>
     <a href="academics.html" style="color: white; margin: 0 10px;">Academics</a>
     <a href="facilities.html" style="color: white; margin: 0 10px;">Facilities</a>
     <a href="gallery.html" style="color: white; margin: 0 10px;">Gallery</a>
