--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <nav>
           <button class="mobile-menu-btn"><i class="fas fa-bars"></i></button>
           <ul>
-            <li><a href="karn_vidya_index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>
               <a href="about.html">About Us</a>
               <ul class="dropdown">
@@ -377,7 +377,7 @@
           Quick Links
         </div>
         <ul class="footer-links">
-          <li><a href="karn_vidya_index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="academics.html">Academics</a></li>
           <li><a href="facilities.html">Facilities</a></li>
